# t1-smart-support

./: .gitignore  AGENTS.md  README.md  added_data.json  based_basic_demo.py  based_old.py  category_id_map.json  data.csv  data_extended.csv  docker-compose.yaml  experiments.ipynb  label_desc.csv  local_bge_server.py  main.py  openapi.json  pyproject.toml  subcategory_id_map.json  subcategory_to_category_map.json
backend/: .dockerignore  Dockerfile  category_id_map.json  data.csv  docker-compose.yaml  main.py  mappings.json  pyproject.toml  schemas.py  services.py
backend/postgres/: schema.sql
backend/scripts/: init_data.py  models.py  train.py
backend/src/: final_model.pkl  main.py  migrate_data.py  schemas.py  services.py
backend/src/scripts/: database.py  models.py  train.py
scripts/: generate_label_desc.py  generate_more_questions_to_answer.py  merge_data.py
ui/: .dockerignore  Dockerfile  README.md  package-lock.json
ui/api/.openapi-generator/: FILES
ui/api/apis/: AnswerRetrievalApi.ts  DefaultApi.ts  SearchApi.ts  index.ts
ui/api/models/: AnswerRequest.ts  PredictionRequest.ts  PredictionResponse.ts  RetrievedAnswerItem.ts  TopAnswersResponse.ts  index.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: category-display.tsx  chat-input.tsx  chat-message.tsx  confidence-badge.tsx  keyboard-shortcuts.tsx  recommendation-card.tsx  recommendations-panel.tsx
ui/lib/: api-client.ts  confidence-utils.ts
ui/types/: chat.ts
