[project]
name = "t1-smart-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "openai",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "umap>=0.1.1",
]

[tool.uv.workspace]
members = [
    "backend",
]
