[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "openai>=2.3.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "scikit-learn>=1.7.2",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
]
